--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-SCRIPT_GOOGLE_ONE=http://localhost:4000/graphql
+REACT_APP_GOOGLE_SCRIPT_ONE=https://script.google.com/macros/s/AKfycbxQmTpERpxv6j_ZmrCOrgOxD5JqBaYX1ZG5ZeqPD2r2xX34ggXLnjINcTjHZ6ok5mQY/exec
+BROWSER=none
