--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
+    "@mui/lab": "^5.0.0-alpha.136",
     "@mui/material": "^5.14.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/styles": "^5.14.0",
     "@mui/x-date-pickers": "^6.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
